<resources>
    <string name="app_name">ejednevnik</string>
    <string name="title">DIARY</string>
    <string name="calendar_btn">Календарь</string>
    <string name="spisokvt_btn">Список неосновных дел</string>
    <string name="add_btn">Добавление</string>
    <string name="calendar_back_btn">Календарь возврат</string>
    <string name="spisokvt_back_btn">Список возврат</string>
    <string name="delete_btn">Удаление</string>
    <string name="cr_delo_name">Название</string>
    <string name="cr_delo_date">Дата</string>
    <string name="cr_delo_b_time">Время начала</string>
    <string name="cr_delo_e_time">Время конца</string>
    <string name="cr_title">Добавление</string>
    <string name="up_title">Редактирование</string>
    <string name="cr_btn">НОВОЕ</string>
    <string name="otl_btn">ОТЛОЖИТЬ</string>
    <string name="pen_title">СОЗДАТЬ ОТЛОЖЕННОЕ ДЕЛО</string>
    <string name="promej">Временной промежуток</string>
    <string name="pen_delo_name">Название</string>
    <string name="pen_delo_type">Важность</string>
    <string name="pen_delo_time">Требуемое время</string>
</resources>